--- a/content-files/1.1.ipynb
+++ b/content-files/1.1.ipynb
@@ -5,7 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 1.1. CATEGORIAL VARIABLES\n",
+    "# 1.1. CATEGORICAL VARIABLES\n",
     "\n",
     "## DEFINITION\n",
     "**Categorical variables** are a type of variable used in statistics and research, which **represent data that can be divided into categories or groups based on specific characteristics**. These categories are often non-numerical and are used to represent qualitative data, such as gender, color, or type of car.\n",
