--- a/content-files/1.1.2.ipynb
+++ b/content-files/1.1.2.ipynb
@@ -5,7 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 1.2 ORDINAL VARIABLES\n",
+    "# 1.1.2. ORDINAL VARIABLES\n",
     "\n",
     "## DEFINITION\n",
     "Ordinal variables are a **type of categorical variable where the values have a specific order or ranking**. The values of an ordinal variable are typically numerical or alphanumeric, but they represent a level of a variable that is not evenly spaced. In other words, the difference between the values is not necessarily the same, but they have a clear ordering or ranking, such as Average to Excellent or small to large.\n",
