--- a/content-files/2.1.1.2.ipynb
+++ b/content-files/2.1.1.2.ipynb
@@ -216,6 +216,17 @@
     "plt.title('Actual vs. Predicted Number of Complaints')\n",
     "plt.show()"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## REFERENCES\n",
+    "1. https://en.wikipedia.org/wiki/Poisson_regression\n",
+    "2. https://www.statology.org/poisson-regression/\n",
+    "3. https://www.dataquest.io/blog/tutorial-poisson-regression-in-r/"
+   ]
   }
  ],
  "metadata": {
